--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
+title: CHOWRAID
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is where all my github projects are housed. feel free to use any of the projects that are on my github.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://chowraid.com" # the base hostname & protocol for your site
+twitter_username: chowraid
+github_username:  chowraid
 
 # Build settings
 markdown: kramdown
