--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: CHOWRAID
-email: your-email@domain.com
+email: 
 description: > # this means to ignore newlines until "baseurl:"
   This is where all my github projects are housed. feel free to use any of the projects that are on my github.
 baseurl: "" # the subpath of your site, e.g. /blog
