:gun: Updated Google analytics code and ID

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author:
   twitter: chowraid
   # disqus: your_disqus_forum_shortname
 
-# google_analytics: 'UA-XXXXXXXX-X'
+google_analytics: 'UA-81199663-1'
 
 # Syntax highlighting
 highlightstyle: ''
