:gun: Style Changes

--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -1,8 +1,8 @@
 - slug: design
-  name: 计划
+  name: DESIGN
 
 - slug: tools
-  name: 械
+  name: TOOLS
 
-- slug: productivitys
-  name: 生产率
+- slug: productivity
+  name: PRODUCTIVITY
