Fixed SSL errors update 1.9.9

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author:
   keybase: chowraid
   # disqus: your_disqus_forum_shortname
 
-google_analytics: 'UA-81199663-1'
+#google_analytics: 'UA-81199663-1'
 
 # Syntax highlighting
 highlightstyle: ''
